# SmartCLI

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  AGENTCLI-VALIDATION.md  AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  INSTALL.md  LICENSE  NEXT-STEPS.md  README-USAGE.md  README.md  SECURITY.md  codecov.yml  docker-entrypoint.sh  mkdocs.yml  pyproject.toml  requirements-optional.txt  requirements.txt  server.json  sitecustomize.py
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  codeql.yml  docker.yml  lint.yml  pages.yml  publish-testpypi.yml  publish.yml  release-drafter.yml
docs/: LAUNCH-COPY.md  MACOS-VERIFY.md  PACKAGING-NOTES.md  requirements.txt
docs/i18n/: INSTALL.ja.md  INSTALL.ko.md  INSTALL.zh-Hans.md  INSTALL.zh-Hant.md  README.ja.md  README.ko.md  README.zh-Hans.md  README.zh-Hant.md
docs/site/: index.html  index.ja.html  index.ko.html  index.zh-Hans.html  index.zh-Hant.html
knowledge/: INDEX.md
knowledge/agent-eng/: README.md  aci-design-rules.md  aci-thesis.md  alternate-screen-buffer.md  application-cursor-keys-deckm.md  bracketed-paste.md  crlf-termios.md  hunt-the-esc-byte.md  isatty-branching.md  node-pty-windows-conpty.md  node-pty.md  node-sea-blob.md  pexpect-encoding.md  pexpect-no-windows-pty.md  pty-vs-pipe.md  pywinpty.md  react.md  ripgrep-binary-search.md  source-maps.md  strings-utf16le.md  terminal-bench.md  tmux-capture-pane.md  tmux-control-mode.md  tmux-send-keys-literal.md
knowledge/color-type/: 256-color-cube.md  README.md  box-drawing.md  color-interpolation.md  figlet-flf-spec.md  hsv-cycling-lolcat.md  image-to-ansi-halfblock.md  nearest-color-downgrade.md  palette-solarized.md  palette-synthwave84.md  palette-viridis.md  truecolor-24bit.md  wcwidth-east-asian-width.md
knowledge/effects/: README.md  ascii-luminance-ramp.md  boids.md  bresenham-line.md  choosing-an-effect.md  color-mask-sprites.md  decrypt-reveal.md  donut-torus.md  fire-doom-psx.md  fire-lode.md  game-of-life.md  julia-set.md  mandelbrot.md  matrix-rain.md  particle-system.md  perlin-noise.md  perspective-projection.md  plasma.md  procedural-branching.md  rotating-cube.md  rotation-matrix.md  solarsystem-orrery.md  spectrum-bars.md  sphere-lambert.md  sprite-scroll.md  starfield.md  tunnel.md
knowledge/ground-truth/: README.md  effort-selector.md  hard-lessons.md  rendering-model.md
knowledge/principles/: README.md  ansi-sgr-color.md  box-drawing-glyphs.md  box-model-on-cell-grid.md  cell-grid-model.md  cell-width-measurement.md  cursor-and-screen-control.md  flicker-free-rendering.md  fractional-space-distribution.md  resize-sigwinch-handling.md  sub-cell-resolution.md  terminal-cell-aspect-ratio.md  tmux-alternate-screen.md  tmux-capture-pane.md  tmux-launch-and-sizing.md  truecolor-passthrough-tmux.md
research/: R1-effects-catalog.md  R2-math-animations.md  R3-color-typography.md  R4-tui-patterns.md  R5-arch-and-tmux.md  R6-tmux-real-behavior.md  R7-terminal-ui-layout.md  README.md
smartcli_core/: __init__.py  pty_backend.py  readiness.py  screen_model.py  session.py  snapshot.py
smartcli_tbench/: README.md  __init__.py  agent.py  driver.py  loop.py
tests/: _agentcli_harness_probe.py  _confirm_app.py  _demo_drive.py  _demo_drive_linux2.py  _demo_drive_mac.py  _demo_drive_win.py  _demo_lazygit.py  _drive_probe1.py  _drive_probe2.py  _drive_probe3.py  _drive_probe4.py  _drive_probe5.py  _drive_probe6.py  _filter_app.py  _form_app.py  _mcp_probe.py  _menu_app.py  _pager_app.py  _readme_literal.py  _sandbox_daemon_robustness.py  _sandbox_fuzz_core.py  _sandbox_posix_backend.py  _tui_cli_probe.py  _wizard_app.py  probe_pty_fx.py  run_all.py  test_char_width.py  test_cpr_reply.py  test_degenerate_inputs.py  test_doc_counts.py  test_fx_contract.py  test_golden_frames.py  test_readiness.py  test_sixel.py  test_tbench_adapter.py  test_vendor_sync.py  test_wait_any.py  test_wait_change.py  verify_fx.py
tests/golden/: kv.txt  (+16 more)
tools/: _clean_dead_menu_css.py  _insert_drive_sections.py  _port_ccmenu.py  _render_mac.py  _ssh_run.py  _swap_fx_video.py  build_docs.py  coverage_run.py  make_demo_svg.py  make_drive_video.py  make_fx_gif.py  make_fx_video.py  make_lazygit_gif.py  sync_vendor.py
(+190 files in other folders)
