# pyproject.toml — packaging metadata for SmartCLI.
#
# ---------------------------------------------------------------------------
# HONEST NOTE ON THE INSTALL TARGET (read before `pip install .`):
#
# This repo is a multi-skill workspace, not a single tidy importable package.
# The only clean top-level package is `smartcli_core/` (it has __init__.py and
# exports PtySession et al.). The three skills run IN PLACE via their own
# entry points — `python -m fx`, `python -m ui`, and
# `skills/drive-tui/scripts/tui.py` — with a sys.path insertion, and are NOT
# structured as installable packages under a single namespace.
#
# Therefore:
#   * `pip install .` installs the shared core package (`smartcli_core`) plus
#     its REQUIRED deps (pyte; pywinpty on Windows). That is real and works.
#   * It does NOT relocate/install the skills — keep using them from the repo
#     checkout as the SKILL.md / HANDOFF.md commands show.
#   * The PRIMARY, fully-honest install path for reproducing the whole dev
#     environment is:   python -m pip install -r requirements.txt
#     (plus requirements-optional.txt for the optional extras).
#
# Dependency floors are `>=` known-good baselines. Installed & VERIFIED on the
# dev box (Windows 11, CPython 3.14.6): pyte 0.8.2, pywinpty 3.0.5,
# pyfiglet 1.0.4, Pillow 12.2.0, wcwidth 0.8.1.
# ---------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartcli-toolkit"
version = "0.1.2"
description = "Pluggable-PTY + pyte screen model + semantic snapshot / readiness core for driving interactive terminal programs (SmartCLI shared core)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
# Floor is the HONEST minimum: skills/tui-ui/ui/core.py evaluates a runtime
# `tuple[int, int, int]` subscription at import (PEP 585), which requires 3.9+.
# No match/case and no runtime `X | Y` types are used, so nothing forces higher.
requires-python = ">=3.9"

authors = [{name = "dwgx"}]

keywords = [
    "terminal",
    "tui",
    "pty",
    "ansi",
    "cli",
    "ascii-art",
    "terminal-effects",
    "claude-skill",
    "pyte",
    "conpty",
]

# Real PyPI trove classifiers. NOTE: no `License ::` classifier is listed on
# purpose — with the PEP 639 SPDX `license = "MIT"` field above, setuptools
# (77+) treats a license trove classifier as redundant/conflicting and errors
# out. The SPDX field is the single source of truth for licensing.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Terminals",
    "Topic :: Software Development :: Libraries",
    "Environment :: Console",
]

# REQUIRED runtime deps (mirror requirements.txt). pyte is a hard top-level
# import; pywinpty is imported only on the Windows PTY backend path, hence the
# environment marker. POSIX uses the stdlib `pty` backend (no extra package).
dependencies = [
    "pyte>=0.8.1",
    "pywinpty>=2.0; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/dwgx/SmartCLI"
Repository = "https://github.com/dwgx/SmartCLI"
Changelog = "https://github.com/dwgx/SmartCLI/blob/main/CHANGELOG.md"
Issues = "https://github.com/dwgx/SmartCLI/issues"
PyPI = "https://pypi.org/project/smartcli-toolkit/"

[project.optional-dependencies]
# All guarded imports with pure-stdlib fallbacks — none required to run.
art = ["pyfiglet>=1.0.0"]        # real FIGlet fonts (else built-in block font)
image = ["Pillow>=10.0.0"]       # real raster images (else PNM/procedural demo)
width = ["wcwidth>=0.2.0"]       # authoritative cell width (else unicodedata)
all = ["pyfiglet>=1.0.0", "Pillow>=10.0.0", "wcwidth>=0.2.0"]

[tool.setuptools]
# Only the shared core is a clean installable package (see HONEST NOTE above).
# The skills are intentionally left out — they run in place from the checkout.
packages = ["smartcli_core"]
